[tool.poetry]
name = "reports"
version = "0.1.0"
description = ""
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"
yfinance = "^0.2.10"
pandas-datareader = "^0.10.0"
plotly = "^5.13.0"
matplotlib = "^3.6.3"
streamlit = "^1.17.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
